<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/StoreTheme"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="@color/color_green"
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:layout_marginTop="70dp"
        android:id="@+id/nav_view"
        android:layout_width="257dp"
        android:layout_height="500dp"
        android:layout_gravity="start">

        <LinearLayout
            android:padding="1dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bg_slide"
            android:weightSum="10">

            //3.5

            <ImageView
                android:background="@drawable/bg_slide"
                android:padding="1dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.5"
                android:scaleType="fitXY"
                android:src="@drawable/bannerstore" />
            //Accout 1
            <android.support.v4.widget.Space
                android:layout_weight="0.3"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:orientation="horizontal"
                android:weightSum="11">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon_account" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/account"
                    android:textColor="@color/color_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
            //Send feedback 1

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:orientation="horizontal"
                android:weightSum="11">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon_product" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="Create Product"
                    android:textColor="@color/color_green"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
            //Rate 1

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:orientation="horizontal"
                android:weightSum="11">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon_rate" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="My Category"
                    android:textColor="@color/color_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
            //Share 1

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:orientation="horizontal"
                android:weightSum="11">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/icon_share" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/share"
                    android:textColor="@color/color_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
            //Sign out 1

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="4">

                <ImageView
                    android:id="@+id/imgLogin"
                    android:paddingTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/btnsignin" />

            </LinearLayout>
            //Create store 1

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <TextView
                    android:id="@+id/txtCreateStore"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_create_store"
                    android:gravity="center"
                    android:text="Instruction create product"
                    android:textColor="@color/color_green"
                    android:textStyle="bold" />
            </LinearLayout>
            //0.5

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:gravity="top|right"
                android:paddingRight="10dp"
                android:text="@string/shopme"
                android:textColor="#002906"
                android:textSize="10sp"></TextView>
        </LinearLayout>
    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
